fix: contraste de fonte para melhor leitura

--- a/public/assets/css/components/search_box.css
+++ b/public/assets/css/components/search_box.css
@@ -27,7 +27,7 @@
   font-size: x-small;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
-  color: #858585;
+  color: #363636;
   border-radius: 3px 3px 0 0;
   user-select: none;
 }
